Revert "_config.yml: remove trailing slash in url"
This reverts commit 5c6832998a766557c4a060330b0358965e85c7c0.

It seems to break things, eg.

  <meta name="twitter:image:src" content="{{ site.url }}{{ site.baseurl }}assets/img/posts/{{ page.featured-img }}.jpg">

results in:

  https://ledger-donjon.github.ioassets/img/posts/hsm_bh19.jpg

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ author: CharlesLedger
 description: > # Meta description of Homepage
    The whispers from the Donjon of Ledger. The latest news about security research at Ledger.
 baseurl: "/" # the subpath of your site, e.g. /blog
-url: "https://ledger-donjon.github.io"
+url: "https://ledger-donjon.github.io/"
 
 # SEO PLUGIN
 social:
