--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ author: CharlesLedger
 description: > # Meta description of Homepage
    The whispers from the Donjon of Ledger. The latest news about security research at Ledger.
 baseurl: "/" # the subpath of your site, e.g. /blog
-url: "https://ledger-donjon.github.io/"
+url: "https://donjon.ledger.com/"
 
 # SEO PLUGIN
 social:
@@ -26,7 +26,7 @@ hero_img: posts/sleek_lg.jpg # Main background image: use the path from /assets/
 
 email: donjon@ledger.fr # email for form submission
 
-twitter_username: donjonledger 
+twitter_username: donjonledger
 github_username:  ledger-donjon
 
 
