bounty: add a link to the menu

--- a/_config.yml
+++ b/_config.yml
@@ -17,6 +17,7 @@ social:
 navigation: # Navigation links
   - {name: 'Home', link: '/'}
   - {name: 'About', link: '/about'}
+  - {name: 'Bounty', link: '/bounty'}
   - {name: 'Contact', link: '/contact'}
 
 tagline: >
