--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,10 @@ navigation: # Navigation links
 tagline: >
    The security research at Ledger
 
+collections:
+  lsb:
+    output: true
+
 hero_img: posts/sleek_lg.jpg # Main background image: use the path from /assets/img/ => This will output /assets/img/posts/sleek_lg.jpg
 
 email: donjon@ledger.fr # email for form submission
