--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ navigation: # Navigation links
   - {name: 'Bounty', link: '/bounty'}
   - {name: 'Security Bulletins', link: '/lsb'}
   - {name: 'About', link: '/about'}
-  - {name: 'Tech', link: 'https://ledgerhq.github.io'}
+  - {name: 'Tech', link: 'https://tech.ledger.com'}
   - {name: 'Contact', link: '/contact'}
 
 tagline: >
