layout: set site.baseurl to an empty value

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Donjon # your site title
 author: CharlesLedger 
 description: > # Meta description of Homepage
    The whispers from the Donjon of Ledger. The latest news about security research at Ledger.
-baseurl: "/" # the subpath of your site, e.g. /blog
+baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://donjon.ledger.com/"
 
 # SEO PLUGIN
