--- a/_config.yml
+++ b/_config.yml
@@ -18,6 +18,7 @@ navigation: # Navigation links
   - {name: 'Blog', link: '/'}
   - {name: 'Bounty', link: '/bounty'}
   - {name: 'Security Bulletins', link: '/lsb'}
+  - {name: 'Threat Model', link: '/threat-model'}
   - {name: 'About', link: '/about'}
   - {name: 'Contact', link: '/contact'}
 
@@ -26,6 +27,8 @@ tagline: >
 
 collections:
   lsb:
+    output: true
+  threat-model:
     output: true
 
 hero_img: posts/sleek_lg.jpg # Main background image: use the path from /assets/img/ => This will output /assets/img/posts/sleek_lg.jpg
