--- a/assets/img/icons/manifest.json
+++ b/assets/img/icons/manifest.json
@@ -2,13 +2,13 @@
     "name": "Sleek",
     "icons": [
         {
-            "src": "/assets/img/icons/android-chrome-192x192.png?v=qA3OXqyw77",
+            "src": "/assets/img/icons/android-chrome-192x192.png",
             "sizes": "192x192",
             "type": "image/png"
         },
         {
-            "src": "/assets/img/icons/android-chrome-256x256.png?v=qA3OXqyw77",
-            "sizes": "256x256",
+            "src": "/assets/img/icons/android-chrome-512x512.png",
+            "sizes": "512x512",
             "type": "image/png"
         }
     ],
